--- a/src/components/HumanHand.css
+++ b/src/components/HumanHand.css
@@ -1,6 +1,4 @@
 .human-hand-container {
     display: flex;
     justify-content: center;
-    height: 50%;
-    width: 100%;
 }   
